# GTest-CMake-example

./: .clang-format  CMakeLists.txt  README.md  clang.cmake  gcc.cmake
factorial/: CMakeLists.txt
fibonacci/: CMakeLists.txt
fibonacci/include/: fib.h
fibonacci/src/: fib.cpp
src/: fac.cpp  fib.cpp  main.cpp
test/: CMakeLists.txt
test/src/: main.cpp
